--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
     .btn2:hover {
       background-color: #faa7a7;
       color: black;
+      
     }
 
 
@@ -1961,6 +1962,39 @@
           le passage du temps et la perte.</li>
       <li>Les réminiscences : Le narrateur plonge dans des souvenirs passés, explorant la relation entre le temps, la
           mémoire et l’art. Il découvre le pouvoir de l’art pour capturer l’éphémère.</li>
+
+      <li>Dans "La Prisonnière", qui fait partie du cycle romanesque "À la recherche du temps perdu" de Marcel Proust,
+          Albertine meurt dans un accident de cheval.</li>
+      <li>Le narrateur apprend sa mort de façon indirecte, par un télégramme.</li>
+      <li>Les détails précis de l'accident ne sont pas décrits en détail dans le roman.</li>
+      <li>La mort d'Albertine survient de manière soudaine et inattendue, ce qui provoque un choc chez le narrateur et
+          déclenche une série de réflexions sur la nature de l'amour, de la mémoire et du deuil.</li>
+      <li>Cette mort joue un rôle crucial dans le développement de l'intrigue et dans l'exploration des thèmes
+          centraux de l'œuvre de Proust, notamment la façon dont notre perception des autres et nos souvenirs évoluent
+          avec le temps.</li>
+      <li>La culpabilité : Il se sent responsable de sa mort, pensant que s'il ne l'avait pas retenue à Paris, elle
+          serait encore en vie.</li>
+      <li>Le doute : Il oscille entre l'amour et la jalousie, se demandant constamment si Albertine lui était vraiment
+          fidèle.</li>
+      <li>Le chagrin et le deuil : Il traverse différentes phases de deuil, passant de la dénégation à l'acceptation.
+      </li>
+      <li>L'obsession : Il devient obsédé par le passé d'Albertine, cherchant à reconstituer sa vie et ses relations.
+      </li>
+      <li>La mémoire involontaire : Des souvenirs d'Albertine surgissent de manière inattendue, provoquant des
+          émotions intenses.</li>
+      <li>Albertine meurt lors d'une promenade à cheval à Touraine.</li>
+      <li>Elle tombe de cheval et heurte un arbre.</li>
+      <li>Sa mort est instantanée.</li>
+      <li>Françoise : La domestique du narrateur, qui réagit avec une certaine indifférence à la mort d'Albertine, ce
+          qui choque le narrateur.</li>
+      <li>Andrée : Amie d'Albertine, qui révèle plus tard au narrateur des détails sur la vie d'Albertine, notamment
+          ses relations avec d'autres femmes.</li>
+      <li>Mme Bontemps : La tante d'Albertine, qui informe le narrateur de sa mort par télégramme.</li>
+      <li>Robert de Saint-Loup : Ami du narrateur qui l'aide dans ses enquêtes sur le passé d'Albertine.</li>
+      <li>Aimé : L'ancien maître d'hôtel de Balbec, que le narrateur engage pour enquêter sur le passé d'Albertine.
+      </li>
+      <li>Gilberte : Elle joue un rôle indirect mais important, car c'est en partie grâce à elle que le narrateur
+          commence à se détacher du souvenir d'Albertine.</li>
   </ul>
 
   <h2>Volume VII : Le Temps Retrouvé</h2>
@@ -1972,20 +2006,22 @@
   <h2>La conclusion</h2>
   <p>"À la recherche du temps perdu" est une exploration vaste des thèmes tels que la mémoire, le temps, l’amour, et
       la société. Proust utilise une introspection profonde et une prose riche pour créer un portrait nuancé de
-      l'expérience humaine. Chaque volume développe des idées qui se construisent jusqu'à une conclusion finale dans le dernier tome.
+      l'expérience humaine. Chaque volume développe des idées qui se construisent jusqu'à une conclusion finale dans
+      le dernier tome.
   </p>
 
   <h2>"À la recherche du temps perdu" est un cycle romanesque en 7 volumes publié entre 1913 et 1927.</h2>
 
-<p>Il suit le narrateur à travers son enfance, son adolescence et sa vie d'adulte, explorant les thèmes de la mémoire, du temps qui passe, de la société française de l'époque et de la création littéraire.</p>
+  <p>Il suit le narrateur à travers son enfance, son adolescence et sa vie d'adulte, explorant les thèmes de la
+      mémoire, du temps qui passe, de la société française de l'époque et de la création littéraire.</p>
 
-<h2>Moments clés de l'œuvre</h2>
-<ul>
-  <li>La madeleine trempée dans le thé qui fait remonter les souvenirs d'enfance du narrateur</li>
-  <li>Les salons de la haute société parisienne et les personnages qui les fréquentent</li>
-  <li>La relation complexe entre le narrateur et Albertine</li>
-  <li>La réflexion sur l'art et l'acte d'écrire</li>
-</ul>
+  <h2>Moments clés de l'œuvre</h2>
+  <ul>
+      <li>La madeleine trempée dans le thé qui fait remonter les souvenirs d'enfance du narrateur</li>
+      <li>Les salons de la haute société parisienne et les personnages qui les fréquentent</li>
+      <li>La relation complexe entre le narrateur et Albertine</li>
+      <li>La réflexion sur l'art et l'acte d'écrire</li>
+  </ul>
 
 
 
